--- a/css/template.css
+++ b/css/template.css
@@ -321,7 +321,7 @@ section#header {
 
 .navbar-nav > li.highlighted > a {
   background-color: #159397;
-  border-bottom: 3px solid #000;
+  /* border-bottom: 3px solid #000; */
   color: #fff;
 }
 
